remove proxy/ fixed bugs/ collapse sidenav

--- a/src/app/visualization/visualization.component.scss
+++ b/src/app/visualization/visualization.component.scss
@@ -13,5 +13,25 @@
     position: relative;
 }
 
-
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(196, 193, 193); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #999; 
+  }
 
